<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.detailNgaji.DetailNgajiFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/Appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/marginComponent"
            >
            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="@dimen/arrow_login"
                android:layout_height="@dimen/arrow_login"
                android:src="@drawable/baseline_keyboard_white_arrow_left_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_ngaji"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <ImageView
                android:id="@+id/iv_edit"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/outline_edit_square_24"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <TableLayout
        android:id="@+id/table_jadwal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Appbar"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <LinearLayout
            android:background="@color/green"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/daftar_murid"
                android:padding="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </LinearLayout>

        <TableRow
            android:padding="@dimen/padding_row"
            android:background="@color/green">
            <TextView
                android:text="@string/nama"
                android:textSize="@dimen/table_row"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
            <TextView
                android:text="@string/ustad"
                android:textSize="@dimen/table_row"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
            <TextView
                android:text="@string/tanggal"
                android:textSize="@dimen/table_row"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
            <TextView
                android:text="@string/jam"
                android:textSize="@dimen/table_row"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                />
            <TextView
                android:text="@string/kuota"
                android:textSize="@dimen/table_row"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/white"
                />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>